--- a/index.html
+++ b/index.html
@@ -91,17 +91,6 @@
                   <div class="col-md-12 col-sm-12 content-home">
                      <div class="banner-welcome">
                         <span class="typed-static"><br>
-
-                           <div class="caption-inner">
-                              <div class="ah-headline">
-                                 <span class="typed-static">丁寧なコミュニケーションと技術で<br>
-                                    <span class="ah-words-wrapper">
-                                       <b class="is-visible"> Web制作の</b>
-                                       <b>集客の</b>
-                                    </span>
-                                    <span class="typed-static">お手伝いをさせて頂きます</span>
-                              </div>
-                           </div>
                      </div>
                   </div>
                </div>
@@ -123,7 +112,7 @@
             <div class="col-md-6">
                <div class="about-left">
                   <h2><img src="assets/img/prof.jpg" alt=""></h2>
-                  <h3>Weave代表　室井瑛人</h3>
+                  <h3>室井瑛人</h3>
                </div>
             </div>
             <div class="col-md-6 border">
@@ -131,7 +120,6 @@
                   <h3>About-私について-</h3>
                   <p>東京都在住1988年生まれ。都内のベンチャー企業でECサイトの開発に従事後、
                      ベンチャー企業でWEBエンジニア経験後に独立。
-                     迅速かつ丁寧なコミュニーケーションでWEB集客のお手伝いをさせて頂きます。
                   </p>
                </div>
             </div>
