--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                   <h3>About-私について-</h3>
                   <p>東京都在住1988年生まれ。都内のベンチャー企業でECサイトの開発に従事後、
                      ベンチャー企業でWEBエンジニア経験後に独立。
+                     迅速かつ丁寧なコミュニーケーションでWEB集客のお手伝いをさせて頂きます。
                   </p>
                </div>
             </div>
